add contact component

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,2 +1,15 @@
-<div class=""></div>
-<h1>What would you like to read today?</h1>
+<div class="nyx-home">
+  <section class="nyx-home__section">
+    <div class="nyx-home__options">
+      <h1 class="nyx-home__header">What would you like to read today?</h1>
+      <div class="nyx-home__links">
+        <a routerLink="/top-stories" class="nyx-home__link">Top Stories</a>
+        <a routerLink="/movie-reviews" class="nyx-home__link">Movie Reviews</a>
+        <a routerLink="/book-reviews" class="nyx-home__link">Book Reviews</a>
+      </div>
+    </div>
+  </section>
+  <section class="nyx-home__section">
+    <nyx-contact></nyx-contact>
+  </section>
+</div>
