--- a/src/app/components/main/main.component.scss
+++ b/src/app/components/main/main.component.scss
@@ -19,6 +19,7 @@
     margin: 0;
     font-family: 'Gulzar', serif;
     font-size: 1.5em;
+    font-weight: bold;
     transform: translateY(5px);
     cursor: pointer;
   }
