--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -2,4 +2,6 @@
   <img class="nav__logo" src="assets/images/logo.svg" alt="nytimes-logo" (click)="goToHomePage()">
   <h2 class="nav__app-name" (click)="goToHomePage()">New York Times Articles</h2>
 </nav>
-<router-outlet></router-outlet>
+<div style="padding: 1.5rem">
+  <router-outlet></router-outlet>
+</div>
