--- a/src/app/components/movie-reviews/movie-reviews.component.html
+++ b/src/app/components/movie-reviews/movie-reviews.component.html
@@ -1,1 +1,34 @@
-<p>movie-reviews works!</p>
+<div class="nyx-movie-reviews">
+  <div class="nyx-movie-reviews__header">
+    <h2 class="nyx-movie-reviews__header-title">Movie Reviews</h2>
+    <form [formGroup]="filterForm" class="nyx-movie-reviews__form">
+      <mat-form-field class="nyx-movie-reviews__form-field">
+        <mat-label>Critic Name</mat-label>
+        <input type="text" matInput formControlName="searchKey" placeholder="Enter critic's name">
+      </mat-form-field>
+      <mat-form-field>
+        <mat-select placeholder="Order" formControlName="orderType">
+          <mat-option *ngFor="let type of orderTypes" [value]="type.value">
+            {{ type.displayText }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </form>
+  </div>
+  <div class="nyx-movie-reviews__results">
+    <ng-container *ngIf="articles?.length; else noData">
+      <ng-container *ngFor="let article of articles">
+        <mat-card class="nyx-movie-reviews__article" (click)="visitArticle(article)">
+          <mat-card-title>{{ article.headline }}</mat-card-title>
+          <mat-card-subtitle>{{ article.summary_short }}</mat-card-subtitle>
+          <b>{{ article.byline }}</b>
+          <small>Opening Date: {{ article.opening_date | date : 'MMMM d, yyy' }}</small>
+          <small>Publication Date: {{ article.publication_date | date : 'MMMM d, yyy' }}</small>
+        </mat-card>
+      </ng-container>
+    </ng-container>
+    <ng-template #noData>
+      <span>No Data Found</span>
+    </ng-template>
+  </div>
+</div>
