--- a/src/app/components/contact/contact.component.scss
+++ b/src/app/components/contact/contact.component.scss
@@ -10,6 +10,10 @@
     flex-direction: column;
     margin: 2rem 0;
     width: 30vw;
+
+    @media screen and (max-width: 600px) {
+      width: 90%;
+    }
   }
 
   &__submit-btn {
