--- a/src/app/components/top-stories/top-stories.component.scss
+++ b/src/app/components/top-stories/top-stories.component.scss
@@ -12,6 +12,7 @@
   &__results {
     max-height: 50vh;
     overflow: auto;
+    margin-top: 2rem;
 
     @media screen and (max-width: 600px) {
       max-height: 70vh;
